<!--
  ~ Copyright  2021 Nazar Rusnak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">FinTrack</string>
    <string name="date_separator_text" translatable="false">%1$td %1$tb, %1$tY</string>
    <string name="store_balance">Balance</string>
    <string name="total_balance">Total Balance</string>
    <string name="account_type_card">Card</string>
    <string name="account_type_wallet">Wallet</string>
    <string name="account_name_error">Account name is required</string>
    <string name="transaction_description_hint">Description</string>
    <string name="date_standard" translatable="false">%1$td/%1$tm/%1$tY</string>
    <string name="time_standard" translatable="false">%1$tH:%1$tM</string>
    <string name="add_transaction_label">Add transaction</string>
    <string name="add_transaction_menu_item">Add</string>
    <string name="transaction_amount_hint">Amount</string>
    <string name="date_and_time_label">Date and time</string>
    <string name="category_label">Category</string>
    <string name="add_transaction_category">Add category</string>
    <string name="required_field_label">* Required</string>
    <string name="amount_zero_error">Can\'t be zero</string>
    <string name="format_error">Unexpected format</string>
    <string name="OK" translatable="false">OK</string>
    <string name="insufficient_error_desc">Selected account has low balance for specified operation</string>
    <string name="insufficient_error_title">Low balance</string>
    <string name="category_name">Category name</string>
    <string name="add_transaction_button">Add transaction</string>
    <string name="add_account_title">Add account</string>
    <string name="account_name_hint">Account name</string>
    <string name="account_type_hint">Account type</string>
    <string name="account_balance_hint">Account balance</string>
    <string name="pick">Pick</string>
    <string name="pick_location_title">Pick location</string>
    <string name="select_location_error">You must select location</string>
    <string name="place_name_hint">Place name</string>
    <string name="include_location_info_checkbox">Include location info</string>
    <string name="location_label">Location</string>
    <string name="uah_label">UAH</string>
    <string name="overview_nav">Overview</string>
    <string name="stats_nav">Stats</string>
    <string name="stats_summary">Summary</string>
    <string name="stats_income_label">Income</string>
    <string name="stats_expanses_label">Expenses</string>
    <string name="stats_total_label">Total</string>
    <string name="date_range_standard" translatable="false">%1$td/%1$tm/%1$tY — %2$td/%2$tm/%2$tY</string>
    <string name="chart_date_axis_label" translatable="false">%1$td %1$tb</string>
    <string name="total_balance_history_stats">Total balance history</string>
    <string name="expenses_by_categories_chart">Expenses by categories</string>
    <string name="income_by_categories_chart">Income by categories</string>
    <string name="map_transaction_marker">%1$s, amount: %2$s UAH</string>
    <string name="on_map_nav">On map</string>
    <string name="last_month_transactions">Last month transactions</string>
    <string name="key_length_error">Key must be 44 characters long</string>
    <string name="mono_account_error_403">Unknown key. Verify your key and try again</string>
    <string name="mono_account_error_429">Too many requests. Try again in few minutes</string>
    <string name="mono_account_error">An error occurred, try again later</string>
    <string name="success">Success</string>
    <string name="unknown_label">Unknown</string>
    <string name="mono_account_holder">Monobank account holder: %1$s</string>
    <string name="missing_label">Token status: Missing</string>
    <string name="token_ok_label">Token status: OK</string>
    <string name="set_token_button">Set token</string>
    <string name="personal_token_hint">Personal token</string>
    <string name="mono_token_explanation">1) Acquire personal key at https://api.monobank.ua\n2) Paste it in the following field</string>
    <string name="monobank_sync_status">Monobank sync status</string>
    <string name="sync_notif_channel_name">Monobank sync notifications</string>
    <string name="sync_notif_channel_description">Notifications related to data sync feature</string>
    <string name="last_successful_sync_text">Last successful sync: %1$td %1$tb %1$tH:%1$tM</string>
    <string name="last_failed_sync_text">Last failed sync: %1$td %1$tb %1$tH:%1$tM</string>
    <string name="last_successful_sync_never_text">Last sync: never</string>
    <string name="sync_fail_notification_title">Sync failed</string>
    <string name="sync_fail_notification_body">Invalid monobank token</string>
    <string name="sync_nav">Sync</string>
    <string name="view_balance_history_button">View balance history</string>
    <string name="balance_history_title">Balance history</string>
    <string name="io_error_text">An error occurred, check your internet connection. %1$s</string>
    <string name="sync_now_button">Sync now</string>
    <string name="sync_every_12_hours_check">Sync every 12 hours</string>
    <string name="periodic_sync_label">Periodic sync</string>
    <string name="expenses_by_places_label">Expenses by places</string>
</resources>