<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/date_range_pick_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:icon="@drawable/ic_date_range"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/summary_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:cardBackgroundColor="?colorPrimary"
            app:contentPadding="@dimen/small_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_range_pick_button"
            app:shapeAppearance="@style/topRoundedCorners">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats_summary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6.separator"
                android:textColor="?attr/colorOnPrimary" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/summary_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="?attr/transactionListBg"
            android:backgroundTint="?attr/transactionListBg"
            android:backgroundTintMode="add"
            android:orientation="vertical"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary_separator">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_income_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/gains_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1.medium"
                    android:textColor="?attr/colorTransactionGain"
                    android:textStyle="bold"
                    tools:text="+123" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_expanses_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/expenses_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1.medium"
                    android:textColor="?attr/colorTransactionSpend"
                    android:textStyle="bold"
                    tools:text="-123" />
            </LinearLayout>

            <View
                android:id="@+id/summary_separator_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium">

                <TextView
                    android:id="@+id/total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_total_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/total_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1.medium"
                    android:textStyle="bold"
                    tools:text="0" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/balance_chart_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:contentPadding="@dimen/small_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_balance_history_stats"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:contentPadding="@dimen/small_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses_by_categories_chart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie_chart_expenses"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:contentPadding="@dimen/small_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income_by_categories_chart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie_chart_income"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</ScrollView>